Fix horizontal scroll for timeline

--- a/src/components/timeline/timeline.module.scss
+++ b/src/components/timeline/timeline.module.scss
@@ -3,7 +3,7 @@
 .timeline {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 97%;
   height: fit-content;
   align-items: flex-start;
   justify-content: flex-start;
@@ -12,7 +12,18 @@
 }
 
 .timeline:first-child {
-  margin-left: 2rem;
+  padding-left: 2rem;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.timeline::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.timeline {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 .timeline_items {
